Sistemata tabella e punti elenco sezione Qualità del Prodotto

--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
@@ -180,30 +180,30 @@
 		\end{enumerate}
 		Lo standard analizza la qualità del software sotto tre diversi punti di vista:
 		\begin{itemize}
-			\item \textbf{Qualità interna}: è la qualità del prodotto software che fa riferimento alle caratteristiche implementative del software come l'architettura e il codice derivante da quest'ultima.
-			\item \textbf{Qualità esterna}: è la qualità del prodotto software relativa a quando esso viene eseguito e testato in un ambiente di prova. 
-			\item \textbf{Qualità in uso}: è la qualità del prodotto software dal lato dell'utilizzatore che utilizza tale prodotto all'interno di uno specifico sistema.
+			\item \textbf{Qualità interna:} è la qualità del prodotto software che fa riferimento alle caratteristiche implementative del software come l'architettura e il codice derivante da quest'ultima.
+			\item \textbf{Qualità esterna:} è la qualità del prodotto software relativa a quando esso viene eseguito e testato in un ambiente di prova. 
+			\item \textbf{Qualità in uso:} è la qualità del prodotto software dal lato dell'utilizzatore che utilizza tale prodotto all'interno di uno specifico sistema.
 		\end{itemize}
 			\paragraph{Modello della qualità del software}
 			Nella prima parte dello standard vengono presentati i modelli per la qualità esterna, interna ed in uso.
 				\subparagraph{Modello della qualità esterna ed interna}
 				Il modello di qualità esterna ed interna sancito nella prima parte dello standard è suddiviso in sei caratteristiche generali misurabili attraverso delle metriche:
 				\begin{itemize}
-					\item \textbf{funzionalità}: è la capacità del software di fornire le funzioni che soddisfano determinate esigenze, necessarie per operare in determinate condizioni. 
-					\item \textbf{affidabilità}: rappresenta la capacità del prodotto software di mantenere uno specifico livello di prestazioni quando viene usato in certe condizioni e per un periodo di tempo determinato.
-					\item \textbf{usabilità}: è la capacità di un prodotto software di essere facilmente comprensibile e attraente in ogni sua parte per un utente qualsiasi. Un software è considerato usabile proporzionalmente alla facilità con cui un utente opera per sfruttare al massimo le funzionalità che il software mette a disposizione.
-					\item \textbf{efficienza}: è la capacità di un prodotto di eseguire le funzioni richieste nel minor tempo possibile ed utilizzando le risorse necessarie nel modo migliore.
-					\item \textbf{manutenibilità}: rappresenta la capacità di un prodotto software di essere modificato in tempi rapidi e a costi accessibili. Le modifiche possono riguardare correzioni o adattamenti del prodotto a variazioni negli ambienti, nei requisiti e nelle specifiche funzionali.
-					\item \textbf{portabilità}: è la capacità di un prodotto software di poter essere spostato da un ambiente all'altro velocemente. L'ambiente include sia aspetti hardware che software.
+					\item \textbf{funzionalità:} è la capacità del software di fornire le funzioni che soddisfano determinate esigenze, necessarie per operare in determinate condizioni. 
+					\item \textbf{affidabilità:} rappresenta la capacità del prodotto software di mantenere uno specifico livello di prestazioni quando viene usato in certe condizioni e per un periodo di tempo determinato.
+					\item \textbf{usabilità:} è la capacità di un prodotto software di essere facilmente comprensibile e attraente in ogni sua parte per un utente qualsiasi. Un software è considerato usabile proporzionalmente alla facilità con cui un utente opera per sfruttare al massimo le funzionalità che il software mette a disposizione.
+					\item \textbf{efficienza:} è la capacità di un prodotto di eseguire le funzioni richieste nel minor tempo possibile ed utilizzando le risorse necessarie nel modo migliore.
+					\item \textbf{manutenibilità:} rappresenta la capacità di un prodotto software di essere modificato in tempi rapidi e a costi accessibili. Le modifiche possono riguardare correzioni o adattamenti del prodotto a variazioni negli ambienti, nei requisiti e nelle specifiche funzionali.
+					\item \textbf{portabilità:} è la capacità di un prodotto software di poter essere spostato da un ambiente all'altro velocemente. L'ambiente include sia aspetti hardware che software.
 				\end{itemize}
 				
 				\subparagraph{Modello della qualità in uso}
 				Gli attributi presenti nel modello relativo alla qualità del software in uso sono rappresentati da quattro grandi categorie:
 				\begin{itemize}
-					\item \textbf{efficacia}: è la capacità di consentire all'utente di raggiungere obiettivi specifici con precisione e completezza.
-					\item \textbf{produttività}: rappresenta la capacità di permettere all'utente di utilizzare un numero stabilito di risorse, in relazione all'efficienza raggiunta in uno specifico contesto di utilizzo.
-					\item \textbf{sicurezza fisica}: è la capacità di raggiungere un livello accettabile di rischio di danni a dati, persone, proprietà o ambienti.
-					\item \textbf{soddisfazione}: rappresenta la capacità di soddisfare gli utenti.
+					\item \textbf{efficacia:} è la capacità di consentire all'utente di raggiungere obiettivi specifici con precisione e completezza.
+					\item \textbf{produttività:} rappresenta la capacità di permettere all'utente di utilizzare un numero stabilito di risorse, in relazione all'efficienza raggiunta in uno specifico contesto di utilizzo.
+					\item \textbf{sicurezza fisica:} è la capacità di raggiungere un livello accettabile di rischio di danni a dati, persone, proprietà o ambienti.
+					\item \textbf{soddisfazione:} rappresenta la capacità di soddisfare gli utenti.
 				\end{itemize}
 			\paragraph{Metriche per la qualità del software}
 			Nelle restanti tre parti vengono trattate le metriche per la qualità esterna, interna e in uso.
@@ -216,9 +216,9 @@
 		\subsubsection{Procedure per il controllo delle qualità di prodotto}
 		Il controllo di qualità del prodotto verrà garantito da:
 		\begin{itemize}
-			\item \textbf{quality assurance}: l'insieme di attività realizzate per garantire il raggiungimento degli obiettivi di qualità. Tali attività prevedono la realizzazione di tecniche di analisi statica e dinamica.
-			\item \textbf{verifica}: il processo che stabilisce se il prodotto in uscita da una fase è consistente, corretto e completo. Per tutta la durata del progetto verranno svolte attività di verifica.
-			\item \textbf{validazione}: la conferma oggettiva che il sistema soddisfa i requisiti.
+			\item \textbf{quality assurance:} l'insieme di attività realizzate per garantire il raggiungimento degli obiettivi di qualità. Tali attività prevedono la realizzazione di tecniche di analisi statica e dinamica.
+			\item \textbf{verifica:} il processo che stabilisce se il prodotto in uscita da una fase è consistente, corretto e completo. Per tutta la durata del progetto verranno svolte attività di verifica.
+			\item \textbf{validazione:} la conferma oggettiva che il sistema soddisfa i requisiti.
 		\end{itemize}
 		\subsubsection{Obiettivi di qualità del prodotto}
 		Gli obiettivi di qualità del software che il gruppo \hx{} desidera raggiungere nell'arco del progetto sono un sottoinsieme di quelli enunciati nello standard ISO/IEC 9126:2001:
@@ -535,38 +535,38 @@
 	\begin{table}
 	\begin{tabular}{|l|l|l|}
 	\hline
-	\textbf{Metriche} & \textbf{Range Accettazione} & \textbf{Range Ottimale} \\
+	\textbf{Metriche} 						&\textbf{Range Accettazione} &\textbf{Range Ottimale} \\
 	\hline
-	\textbf{Metriche di Processo}&&\\
+	\textbf{Metriche di Processo}					&				&\\
 	\hline
-	~~Schedule Variance &$\geq{-10}$\% &$\geq{0}$\\
-	~~Budget Variance &$\geq{-10}$\% &$\geq{0}$\\
-	~~Produttività di codifica &$\geq{10}$ &$\geq{3}$\\
-	~~Test di Unità eseguiti&85-100&100-100\\
-	~~Test di Integrazione eseguiti&55-100&70-100\\
-	~~Test di Sistema eseguiti&70-100&80-100\\
-	~~Test di Accettazione eseguiti&90-100&100-100\\
-	~~Indice Gulpease&40-100&50-100\\
-	~~Copertura del codice&40-100&60-100\\
+	~~Schedule Variance 							&$\geq{-10}$\%	&$\geq{0}$\\
+	~~Budget Variance 								&$\geq{-10}$\%	&$\geq{0}$\\
+	~~Produttività di codifica 						&$\geq{10}$		&$\geq{3}$\\
+	~~Test di Unità eseguiti						&85-100			&100-100\\
+	~~Test di Integrazione eseguiti					&55-100			&70-100\\
+	~~Test di Sistema eseguiti						&70-100			&80-100\\
+	~~Test di Accettazione eseguiti					&90-100			&100-100\\
+	~~Indice Gulpease								&40-100			&50-100\\
+	~~Copertura del codice							&40-100			&60-100\\
 	\hline
-	\textbf{Metriche di prodotto}&&\\
+	\textbf{Metriche di prodotto}					&				&\\
 	\hline
-	~~Copertura Requisiti Obbligatori&100-100&100-100\\
-	~~Copertura Requisiti Desiderabili&40-100&80-100\\
-	~~Test superati&90-100&100-100\\
-	~~Profondità annidamento&0-10&0-4\\
-	~~Chiamate innestate di metodi&0-10&0-5\\
-	~~Numero di statement per metodo&0-50&0-30\\
-	~~Numero di parametri per metodo&0-10&0-4\\
-	~~Numero di campi dati per classe&0-25&0-10\\
-	~~Numero di metodi per classe&0-30&0-15\\
-	~~Gradi di accoppiamento&0-7&0-3\\
-	~~Complessità ciclomatica&1-15&1-10\\
-	~~Lunghezza media di un'unità&100-500&100-300\\
-	~~Fan-in&0-20&0-5\\
-	~~Fan-out&0-20&0-5\\
-	~~Rapporto linee di commento su linee di codice&$\geq{20}$&$\geq{30}$\\
-	~~Validazione W3C&0-20&0-0\\
+	~~Copertura Requisiti Obbligatori				&100-100		&100-100\\
+	~~Copertura Requisiti Desiderabili				&40-100			&80-100\\
+	~~Test superati									&90-100			&100-100\\
+	~~Profondità annidamento						&0-10			&0-4\\
+	~~Chiamate innestate di metodi					&0-10			&0-5\\
+	~~Numero di statement per metodo				&0-50			&0-30\\
+	~~Numero di parametri per metodo				&0-10			&0-4\\
+	~~Numero di campi dati per classe				&0-25			&0-10\\
+	~~Numero di metodi per classe					&0-30			&0-15\\
+	~~Gradi di accoppiamento						&0-7			&0-3\\
+	~~Complessità ciclomatica						&1-15			&1-10\\
+	~~Lunghezza media di un'unità					&100-500		&100-300\\
+	~~Fan-in										&0-20			&0-5\\
+	~~Fan-out										&0-20			&0-5\\
+	~~Rapporto linee di commento su linee di codice	&$\geq{20}$		&$\geq{30}$\\
+	~~Validazione W3C								&0-20			&0-0\\
 	\hline
 	\end{tabular}
 	\caption{Riepilogo delle metriche e dei range di accettazione e ottimali}
@@ -577,10 +577,10 @@
 	\subsection{Tipi di test}
 	Sono stati individuati quattro tipologie di test:
 	\begin{itemize}
-		\item \textbf{Test di unità [TU]}: test con i quali si cerca di verificare la più piccola parte di lavoro prodotta da un programmatore, quali metodi e funzioni scritte;
-		\item \textbf{Test di integrazione [TI]}: test per verificare le componenti di sistema con l'obiettivo di verificare il funzionamento dei vari package prodotti, singolarmente o nel loro insieme;
-		\item \textbf{Test di sistema [TS]}: test con i quali si tenta di verificare che il funzionamento e il comportamento dell'architettura siano corretti;
-		\item \textbf{Test di accettazione [TA]}: test per verificare che il prodotto soddisfi le richieste del proponente.
+		\item \textbf{Test di unità [TU]:} test con i quali si cerca di verificare la più piccola parte di lavoro prodotta da un programmatore, quali metodi e funzioni scritte;
+		\item \textbf{Test di integrazione [TI]:} test per verificare le componenti di sistema con l'obiettivo di verificare il funzionamento dei vari package prodotti, singolarmente o nel loro insieme;
+		\item \textbf{Test di sistema [TS]:} test con i quali si tenta di verificare che il funzionamento e il comportamento dell'architettura siano corretti;
+		\item \textbf{Test di accettazione [TA]:} test per verificare che il prodotto soddisfi le richieste del proponente.
 	\end{itemize}
 	Si sottolinea che la specifica dei test delle diverse tipologie verrà inserita nel presente documento a seguito della fase di progettazione del \gloss{prodotto} in esame.
 \end{document}
