macro piano di progetto

--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
@@ -1038,9 +1038,88 @@ Questo quadro riassuntivo include il periodo di {\AR}, il quale \textbf{non è a
 
 \subsection{Ore rendicontate del progetto}
 %stessa cosa della sezione precedente
-\subsubsection{Costo ore rendicontate del progetto}
-%idem
+Di seguito si riporta la divisione oraria pianificata generale delle sole ore rendicontate.
 
+Successivamente sono evidenziate graficamente la divisione delle ore per persona e ruolo.
+
+Questo quadro riassuntivo esclude il periodo di {\AR}: il totale risultante \textbf{è a carico del cliente}.
+
+Il quantitativo rendicontato a preventivo a persona varia tra le \textbf{103} e \textbf{108 ore} e il quantitativo di ore preventivate totali è fissato a \textbf{634 ore}.
+
+{\hx} complessivamente ritiene di aver diviso equamente il carico di lavoro, in quanto i scostamenti orari in misura minore del 5\%.
+
+\begin{figure}[H]
+\definecolor{white2}{rgb}{0.95,0.95,0.95}
+\definecolor{white3}{rgb}{0.9,0.9,0.9}
+%\rowcolors{1}{white}{white2}
+
+\makebox[\textwidth][c]
+{
+  \begin{tabular}[width=1.2\textwidth]{ | l | c | c | c | c | c | c | r |}
+    \hline
+    \rowcolor[gray]{.9}
+    Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot ore/persona \\ \hline
+    \PB & 3 & 8 & 0 & 48 & 30 & 18 & 107 \\ \hline
+    \LB & 3 & 8 & 0 & 46 & 30 & 16 & 103 \\ \hline
+    \GG & 3 & 5 & 0 & 45 & 30 & 20 & 103 \\ \hline
+    \MM & 2 & 0 & 2 & 45 & 30 & 27 & 106 \\ \hline
+    \LS & 2 & 3 & 5 & 50 & 30 & 17 & 107 \\ \hline
+    \AZ & 2 & 5 & 8 & 46 & 30 & 17 & 108 \\ \hline
+    \rowcolor[gray]{.9}
+
+    Totale ore/ruolo & 35 & 93 & 76 & 280 & 180 & 164 & 828 \\ \hline
+    
+  \end{tabular}
+  }
+  
+  \label{tab:rend}
+
+  \caption{Tabella costo generale per ruolo e per persona, valori in euro (\euro).}
+\end{figure} 
+% i colori danno problemi di visualizzazione alle linee
+
+
+\subsubsection{Costo ore rendicontate del progetto}
+Di seguito si riporta il costo delle ore totali rendicontate, suddiviso per persona e ruolo.
+
+Questo quadro riassuntivo esclude il periodo di {\AR}: i costi che seguono \textbf{ sono a carico del cliente}.
+
+\begin{figure}[H]
+\makebox[\textwidth][c]
+{
+\definecolor{white2}{rgb}{0.95,0.95,0.95}
+\definecolor{white3}{rgb}{0.9,0.9,0.9}
+%\rowcolors{1}{white}{white2}
+
+  \begin{tabular}{ | l | c | c | c | c | c | c | r |}
+    \hline
+    \rowcolor[gray]{.9}
+    Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot euro/persona \\ \hline
+    \PB & 90 & 160 & 0 & 1056 & 450 & 270 & 2026 \\ \hline
+    \LB & 90 & 160 & 0 & 1012 & 450 & 240 & 1952 \\ \hline
+    \GG & 90 & 100 & 0 & 990 & 450 & 300 & 1930 \\ \hline
+    \MM & 60 & 0 & 50 & 990 & 450 & 405 & 1955 \\ \hline
+    \LS & 60 & 60 & 125 & 1100 & 450 & 255 & 2050 \\ \hline
+    \AZ & 60 & 100 & 200 & 1012 & 450 & 255 & 2077 \\ \hline
+    \rowcolor[gray]{.9}
+
+    Totale euro/ruolo & 450 & 580 & 375 & 6160 & 2700 & 1725 & 11990 \\ \hline
+  \end{tabular}
+  
+}\label{tab:cgen}
+
+  \caption{Tabella costo totale per ruolo e per persona, valori in euro (\euro).}
+\end{figure}
+
+Il costo totale del progetto {\proj} preventivato è arrotondato a \textbf{12000{\euro}} (\emph{dodicimila euro}).
+
+\begin{figure}[H]
+\makebox[\textwidth][c]{
+\includegraphics[width=1.2\textwidth]{img/costototale.png}}
+\label{tab:cgen1}
+
+  \caption{Costo totale per il progetto {\proj} per ruolo e per persona, valori in euro (\euro).}
+\end{figure}
 \section{Consuntivo di periodo} \label{sec:consuntivo}
 %da fare
 
@@ -1053,7 +1132,8 @@ Questo quadro riassuntivo include il periodo di {\AR}, il quale \textbf{non è a
 			\hline
 			\textbf{Nominativo} & \textbf{Data di redazione} & \textbf{Firma} \\[1ex]
 			\hline
-			\LB & 25-12-2016 %& \myincludegraphics{path firma} \\[1ex]
+			\LB & 25-12-2016 %& \myincludegraphics{path firma}
+			 \\[1ex]
 			\hline
 		\end{tabular}
 	\end{center}
@@ -1068,7 +1148,8 @@ Questo quadro riassuntivo include il periodo di {\AR}, il quale \textbf{non è a
 			\hline
 			\textbf{Nominativo}     & \textbf{Data di approvazione} & \textbf{Firma}  \\[1ex]
 			\hline
-			\LB		& 24-01-2017					%& \myincludegraphics{path firma}			\\[1ex]
+			\LB		& 24-01-2017					%& \myincludegraphics{path firma}			
+			\\[1ex]
 			\hline
 			\TV	&								&			\\[1ex]
 			\hline
@@ -1085,17 +1166,23 @@ Questo quadro riassuntivo include il periodo di {\AR}, il quale \textbf{non è a
 			\hline
 			\textbf{Nominativo} & \textbf{Data di accettazione} & \textbf{Firma} \\[1ex]
 			\hline
-			\AZ	&	24-01-2017	%& \myincludegraphics{path firma}	\\[1ex]
+			\AZ	&	24-01-2017	%& \myincludegraphics{path firma}	
+			\\[1ex]
 			\hline
-			\GG		&	24-01-2017	%& \myincludegraphics{path firma}		\\[1ex]
+			\GG		&	24-01-2017	%& \myincludegraphics{path firma}		
+			\\[1ex]
 			\hline
-			\LB		&	24-01-2017	%& \myincludegraphics{path firma}		\\[1ex]
+			\LB		&	24-01-2017	%& \myincludegraphics{path firma}		
+			\\[1ex]
 			\hline
-			\LS		&	24-01-2017	%& \myincludegraphics{path firma}		\\[1ex]
+			\LS		&	24-01-2017	%& \myincludegraphics{path firma}		
+			\\[1ex]
 			\hline
-			\MM		&	24-01-2017	%& \myincludegraphics{path firma}		\\[1ex]
+			\MM		&	24-01-2017	%& \myincludegraphics{path firma}		
+			\\[1ex]
 			\hline
-			\PB		&	24-01-2017	%& \myincludegraphics{path firma}		\\[1ex]
+			\PB		&	24-01-2017	%& \myincludegraphics{path firma}		
+			\\[1ex]
 			\hline
 		\end{tabular}
 	\end{center}
