--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -69,3 +69,12 @@
 \newcommand{\PG}{\emph{Pmm.}}
 \newcommand{\R}{\emph{Resp.}}
 \newcommand{\AM}{\emph{Amm.}}
+
+
+%Ruoli svolti estesi
+\newcommand{\Vx}{\emph{Verificatore}}
+\newcommand{\ANx}{\emph{Analista}}
+\newcommand{\PJx}{\emph{Progettista}}
+\newcommand{\PGx}{\emph{Programmatore}}
+\newcommand{\Rx}{\emph{Responsabile di Progetto}}
+\newcommand{\AMx}{\emph{Amministratore}}
